# useless-things

./: .gitignore  CMakeLists.txt  README.md
evaluation/: CMakeLists.txt  main.cpp
logger/: CMakeLists.txt  logger.h  main.cpp
sudoku/: CMakeLists.txt  matrix.cpp  matrix.h  number.cpp  number.h
